--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ python:
   - "3.6"
 
 # command to install dependencies
-# install: "pip install -r requirements.txt"
+install: "pip install -r requirements.txt"
 # command to run tests
 script: python3 test_CblcScrapy.py
